Fixed bug: Collapsing of comments is broken.
git-svn-id: svn://svn.totalactivemedia.nl/beeldgeluid@18708 a5e0a7a9-93bf-8f48-8ca9-7e8460674ce7

--- a/sites/all/themes/beeldgeluid/css/comments.css
+++ b/sites/all/themes/beeldgeluid/css/comments.css
@@ -100,3 +100,9 @@ h3.comment-title /* Comment title */ {
   font-family: Verdana,Tahoma,"DejaVu Sans",sans-serif;
   font-weight: bold;
 }
+
+.comment-list   {
+  position: relative;
+  float:left;
+  width: 480px;
+  }
